loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: too many arguments for method gauche: ()Unit
gauche(3) 
      ^